# tauri-plugin-apple-iap

./: .gitignore  Cargo.toml  README.MD  build.rs
ios/: Package.swift
ios/Sources/Plugin/: AppleIapPlugin.swift
macos/: Package.swift
macos/Sources/AppleIapMacOS/: AppleIapMacOS.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: current_entitlements.toml  finish_transaction.toml  list_products.toml  sync_purchases.toml
permissions/schemas/: schema.json
src/: lib.rs  macos.rs  models.rs
