[package]
name = "tauri-plugin-apple-iap"
version = "1.0.0"
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"
links = "tauri-plugin-apple-iap"
description = "Apple In-App Purchase plugin for Tauri iOS apps"
license = "MIT OR Apache-2.0"

[lib]
name = "tauri_plugin_apple_iap"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.10.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.7"

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
swift-rs = { version = "1.0.7", features = ["build"] }
